.metals/.reports/metals/2023-10-07/r_scala-toplevel-mtags_10-24-25-854
id: file://<HOME>/Documents/UnB/Disciplinas/4%C2%BA%20SEMESTRE/TP2/scala-word-count/src/test/scala/components/commands/WordCount_Test.scala:[30..30) in Input.VirtualFile("file://<HOME>/Documents/UnB/Disciplinas/4%C2%BA%20SEMESTRE/TP2/scala-word-count/src/test/scala/components/commands/WordCount_Test.scala", "package components.commands.

")
file://<HOME>/Documents/UnB/Disciplinas/4%C2%BA%20SEMESTRE/TP2/scala-word-count/src/test/scala/components/commands/WordCount_Test.scala:3: error: expected identifier; obtained eof

^